<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/white70">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/postTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/newsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/messageTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/contentPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabsLayout">

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>