<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:elevation="5dp"
    android:background="@drawable/rounded_white_card"
    >


    <ImageView
        android:id="@+id/postImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="216:150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/postHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="16dp"
        android:text="@string/heading"
        android:maxLines="2"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postImage" />

    <TextView
        android:id="@+id/postAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/author"
        android:textSize="12dp"
        android:layout_marginLeft="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="@+id/postHeading"
        app:layout_constraintTop_toBottomOf="@+id/postHeading" />

    <TextView
        android:id="@+id/postPostedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="12dp"
        android:text="@string/date_placeHolder"
        android:textColor="@color/lightblacktext"
        app:layout_constraintStart_toEndOf="@+id/postAuthor"
        app:layout_constraintTop_toBottomOf="@+id/postHeading" />

    <TextView
        android:id="@+id/postContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/lightblacktext"
        android:text="@string/content"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postPostedDate" />

</androidx.constraintlayout.widget.ConstraintLayout>